--- a/D_Accounting/MainWindow.xaml
+++ b/D_Accounting/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:D_Accounting"
+        xmlns:model="clr-namespace:D_AccountingCore;assembly=D_AccountingCore"
         Title="D_Accounting" Height="350" Width="525">
     <Window.Resources>
         <!-- View Model -->
@@ -81,15 +82,15 @@
                 </Style>
             </ItemsControl.ItemContainerStyle>
             <ItemsControl.ItemTemplate>
-                <DataTemplate DataType="{x:Type local:AbstractCase}">
+                <DataTemplate DataType="{x:Type model:AbstractCase}">
                     <Border BorderBrush="Black" BorderThickness="1">
                         <Border.Resources>
                             <!-- Fix Description Case -->
-                            <DataTemplate DataType="{x:Type local:FixDescriptionCase}">
+                            <DataTemplate DataType="{x:Type model:FixDescriptionCase}">
                                 <TextBlock Text="{Binding Path=Name}" Style="{StaticResource Default_TextBlock_Style}"/>
                             </DataTemplate>
                             <!-- Gray Unaccessible Case -->
-                            <DataTemplate DataType="{x:Type local:GrayUnaccessibleCase}">
+                            <DataTemplate DataType="{x:Type model:GrayUnaccessibleCase}">
                                 <TextBlock Background="Gray"/>
                             </DataTemplate>
                         </Border.Resources>
