--- a/D_Accounting/MainWindow.xaml
+++ b/D_Accounting/MainWindow.xaml
@@ -9,12 +9,12 @@
         <local:MainViewModel x:Key="mMainViewModel"/>
         <CollectionViewSource x:Key="CasesView" Source="{Binding Source={StaticResource mMainViewModel}, Path=Cases}"/>
         <!-- Styles -->
-        <Style TargetType="{x:Type TextBlock}" x:Key="Default_TextBlock_Style">
+        <Style TargetType="TextBlock" x:Key="Default_TextBlock_Style">
             <Setter Property="FontFamily" Value="Californian FB"/>
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="Margin" Value="3"/>
         </Style>
-        <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource Default_TextBlock_Style}" x:Key="ButtonContent_TextBlock_Style">
+        <Style TargetType="TextBlock" BasedOn="{StaticResource Default_TextBlock_Style}" x:Key="ButtonContent_TextBlock_Style">
             <Setter Property="FontSize" Value="12"/>
             <Setter Property="Margin" Value="6, 3"/>
         </Style>
@@ -23,7 +23,11 @@
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="Margin" Value="2"/>
         </Style>
-        <Style TargetType="{x:Type Button}" x:Key="Default_Button_Style">
+        <Style TargetType="TextBox" BasedOn="{StaticResource Default_TextBox_Style}" x:Key="Grid_TextBox_Style">
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Margin" Value="1"/>
+        </Style>
+        <Style TargetType="Button" x:Key="Default_Button_Style">
             <Setter Property="Margin" Value="5"/>
         </Style>
     </Window.Resources>
@@ -106,6 +110,13 @@
                             <!-- Gray Unaccessible Case -->
                             <DataTemplate DataType="{x:Type model:GrayUnaccessibleCase}">
                                 <TextBlock Background="Gray"/>
+                            </DataTemplate>
+                            <!-- Amount case -->
+                            <DataTemplate DataType="{x:Type model:AmountCase}">
+                                <WrapPanel>
+                                    <TextBox Text="{Binding Path=Amount, Mode=TwoWay, UpdateSourceTrigger=LostFocus}"  Style="{StaticResource Grid_TextBox_Style}"/>
+                                    <TextBlock Text="€" Style="{StaticResource Default_TextBlock_Style}" Margin="2"/>
+                                </WrapPanel>
                             </DataTemplate>
                         </Border.Resources>
                         <ContentPresenter Content="{Binding}"/>
