--- a/D_Accounting/MainWindow.xaml
+++ b/D_Accounting/MainWindow.xaml
@@ -81,11 +81,12 @@
                                         UpdateSourceTrigger=PropertyChanged}"/>
             </WrapPanel>
             <WrapPanel Grid.Row="1">
-                <Button Style="{StaticResource Default_Button_Style}">
+                <Button Style="{StaticResource Default_Button_Style}" Command="{Binding Source={StaticResource mMainViewModel}, Path=AddOperationCommand}">
                     <TextBlock Text="Add" Style="{StaticResource ButtonContent_TextBlock_Style}"/>
                 </Button>
                 <TextBlock Text="operation to" Style="{StaticResource Default_TextBlock_Style}" VerticalAlignment="Center"/>
-                <ComboBox ItemsSource="{Binding Source={StaticResource mMainViewModel}, Path=Cases.AccountNames}"
+                <ComboBox ItemsSource="{Binding Source={StaticResource mMainViewModel}, Path=Cases.AccountNames, Mode=OneWay}"
+                          SelectedItem="{Binding Source={StaticResource mMainViewModel}, Path=SelectedAccount, Mode=OneWayToSource}"
                           Style="{StaticResource Default_ComboBox_Style}">
                     <ComboBox.ItemTemplate>
                         <ItemContainerTemplate>
