--- a/D_Accounting/App.xaml
+++ b/D_Accounting/App.xaml
@@ -1,8 +1,50 @@
 ﻿<Application x:Class="D_Accounting.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="clr-namespace:D_Accounting"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <!-- View Model -->
+        <local:MainViewModel x:Key="mMainViewModel"/>
+        <!-- Styles -->
+        <Style TargetType="TextBlock" x:Key="Default_TextBlock_Style">
+            <Setter Property="FontFamily" Value="Californian FB"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="Margin" Value="3"/>
+        </Style>
+        <Style TargetType="TextBlock" BasedOn="{StaticResource Default_TextBlock_Style}" x:Key="ButtonContent_TextBlock_Style">
+            <Setter Property="FontSize" Value="12"/>
+            <Setter Property="Margin" Value="6, 3"/>
+        </Style>
+        <Style TargetType="TextBlock" BasedOn="{StaticResource Default_TextBlock_Style}" x:Key="Amount_TextBlock_Style">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding Path=IsNegative}" Value="True">
+                    <Setter Property="Foreground" Value="Red"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+        <Style TargetType="TextBox" x:Key="Default_TextBox_Style">
+            <Setter Property="FontFamily" Value="Californian FB"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="Margin" Value="2"/>
+        </Style>
+        <Style TargetType="TextBox" BasedOn="{StaticResource Default_TextBox_Style}" x:Key="Grid_TextBox_Style">
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Margin" Value="1"/>
+        </Style>
+        <Style TargetType="TextBox" BasedOn="{StaticResource Grid_TextBox_Style}" x:Key="Amount_TextBox_Style">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding Path=IsNegative}" Value="True">
+                    <Setter Property="Foreground" Value="Red"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+        <Style TargetType="ComboBox" x:Key="Default_ComboBox_Style">
+            <Setter Property="Margin" Value="5, 2"/>
+            <Setter Property="Width" Value="150"/>
+        </Style>
+        <Style TargetType="Button" x:Key="Default_Button_Style">
+            <Setter Property="Margin" Value="5"/>
+        </Style>
     </Application.Resources>
 </Application>
