--- a/D_Accounting/MainWindow.xaml
+++ b/D_Accounting/MainWindow.xaml
@@ -1,53 +1,10 @@
 ﻿<Window x:Class="D_Accounting.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:D_Accounting"
         xmlns:model="clr-namespace:D_AccountingCore;assembly=D_AccountingCore"
-        Title="D_Accounting" Height="350" Width="525">
+        Title="D_Accounting" Height="600" Width="730">
     <Window.Resources>
-        <!-- View Model -->
-        <local:MainViewModel x:Key="mMainViewModel"/>
         <CollectionViewSource x:Key="CasesView" Source="{Binding Source={StaticResource mMainViewModel}, Path=Cases}"/>
-        <!-- Styles -->
-        <Style TargetType="TextBlock" x:Key="Default_TextBlock_Style">
-            <Setter Property="FontFamily" Value="Californian FB"/>
-            <Setter Property="FontSize" Value="14"/>
-            <Setter Property="Margin" Value="3"/>
-        </Style>
-        <Style TargetType="TextBlock" BasedOn="{StaticResource Default_TextBlock_Style}" x:Key="ButtonContent_TextBlock_Style">
-            <Setter Property="FontSize" Value="12"/>
-            <Setter Property="Margin" Value="6, 3"/>
-        </Style>
-        <Style TargetType="TextBlock" BasedOn="{StaticResource Default_TextBlock_Style}" x:Key="Amount_TextBlock_Style">
-            <Style.Triggers>
-                <DataTrigger Binding="{Binding Path=IsNegative}" Value="True">
-                    <Setter Property="Foreground" Value="Red"/>
-                </DataTrigger>
-            </Style.Triggers>
-        </Style>
-        <Style TargetType="TextBox" x:Key="Default_TextBox_Style">
-            <Setter Property="FontFamily" Value="Californian FB"/>
-            <Setter Property="FontSize" Value="14"/>
-            <Setter Property="Margin" Value="2"/>
-        </Style>
-        <Style TargetType="TextBox" BasedOn="{StaticResource Default_TextBox_Style}" x:Key="Grid_TextBox_Style">
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="Margin" Value="1"/>
-        </Style>
-        <Style TargetType="TextBox" BasedOn="{StaticResource Grid_TextBox_Style}" x:Key="Amount_TextBox_Style">
-            <Style.Triggers>
-                <DataTrigger Binding="{Binding Path=IsNegative}" Value="True">
-                    <Setter Property="Foreground" Value="Red"/>
-                </DataTrigger>
-            </Style.Triggers>
-        </Style>
-        <Style TargetType="ComboBox" x:Key="Default_ComboBox_Style">
-            <Setter Property="Margin" Value="5, 2"/>
-            <Setter Property="Width" Value="150"/>
-        </Style>
-        <Style TargetType="Button" x:Key="Default_Button_Style">
-            <Setter Property="Margin" Value="5"/>
-        </Style>
     </Window.Resources>
     <Window.InputBindings>
         <KeyBinding Key="Z" Modifiers="Control" Command="{Binding Source={StaticResource mMainViewModel}, Path=UndoCommand, Mode=OneWay}"/>
@@ -57,10 +14,18 @@
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="_File">
                 <MenuItem Header="_New"/>
-                <MenuItem Header="_Save"/>
-                <MenuItem Header="_Rename loaded data file"/>
+                <MenuItem Header="_Load"/>
+                <MenuItem Header="_Save" Command="{Binding Source={StaticResource mMainViewModel}, Path=SaveCommand}"/>
+                <MenuItem Click="Click_MenuItem_DialogForChoosingDataFilePath">
+                    <MenuItem.Header>
+                        <StackPanel>
+                            <TextBlock Text="Modify save file"/>
+                            <TextBlock Text="{Binding Source={StaticResource mMainViewModel}, Path=DataFilePath}"/>
+                        </StackPanel>
+                    </MenuItem.Header>
+                </MenuItem>
             </MenuItem>
-            <MenuItem Header="_Edition">
+            <MenuItem Header="_Command">
                 <MenuItem Header="_Undo" Command="{Binding Source={StaticResource mMainViewModel}, Path=UndoCommand, Mode=OneWay}"/>
                 <MenuItem Header="_Redo" Command="{Binding Source={StaticResource mMainViewModel}, Path=RedoCommand, Mode=OneWay}"/>
             </MenuItem>
