--- a/D_Accounting/WriteDataFilePathDialog.xaml
+++ b/D_Accounting/WriteDataFilePathDialog.xaml
@@ -2,14 +2,20 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:system="clr-namespace:System;assembly=mscorlib"
+        xmlns:local="clr-namespace:D_Accounting"
         Title="Choose new data file path" Height="130" Width="700">
     <Window.Resources>
+        <local:FileInfoToStringConverter x:Key="fileInfoToStringConverter"/>
         <system:Double x:Key="buttonSize">60</system:Double>
     </Window.Resources>
     <Grid>
         <StackPanel>
             <TextBlock FontStyle="Italic" Style="{StaticResource Default_TextBlock_Style}" Text="Modify the data file path :"/>
-            <TextBox Style="{StaticResource Default_TextBox_Style}" Text="{Binding Source={StaticResource mMainViewModel}, Path=DataFilePath, Mode=TwoWay}"/>
+            <TextBox Style="{StaticResource Default_TextBox_Style}" Text="{Binding Source={StaticResource mMainViewModel},
+                Path=DataFilePath,
+                Mode=TwoWay,
+                UpdateSourceTrigger=PropertyChanged,
+                Converter={StaticResource fileInfoToStringConverter}}"/>
             <Separator/>
             <WrapPanel HorizontalAlignment="Right" Margin="0, 2, 20, 0">
                 <Button Style="{StaticResource Default_Button_Style}" Width="{StaticResource buttonSize}" Click="Event_ClickSaveButton_ReturnNewValue">
